actualizacion: diseño en la UI implementado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Poke-jaax</string>
+    <string name="app_name">Pokedex</string>
     <string name="image_description">image description</string>
     <string name="dots">…</string>
     <string name="shiny">Shiny</string>
-    <string name="stats">Stats</string>
-    <string name="loading">Cargando...</string>
+    <string name="basic_stats">Stats base</string>
+    <string name="normal">Normal</string>
 </resources>
